// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android elevation(0) matches snapshot 1`] = `
Object {
  "elevation": 0,
}
`;

exports[`Android elevation(1) matches snapshot 1`] = `
Object {
  "elevation": 1,
}
`;

exports[`Android elevation(2) matches snapshot 1`] = `
Object {
  "elevation": 2,
}
`;

exports[`Android elevation(3) matches snapshot 1`] = `
Object {
  "elevation": 3,
}
`;

exports[`Android elevation(4) matches snapshot 1`] = `
Object {
  "elevation": 4,
}
`;

exports[`Android elevation(6) matches snapshot 1`] = `
Object {
  "elevation": 6,
}
`;

exports[`Android elevation(8) matches snapshot 1`] = `
Object {
  "elevation": 8,
}
`;

exports[`Android elevation(9) matches snapshot 1`] = `
Object {
  "elevation": 9,
}
`;

exports[`Android elevation(12) matches snapshot 1`] = `
Object {
  "elevation": 12,
}
`;

exports[`Android elevation(16) matches snapshot 1`] = `
Object {
  "elevation": 16,
}
`;

exports[`Android elevation(24) matches snapshot 1`] = `
Object {
  "elevation": 24,
}
`;

exports[`iOS elevation(0) matches snapshot 1`] = `Object {}`;

exports[`iOS elevation(1) matches snapshot 1`] = `
Object {
  "shadowColor": "#000",
  "shadowOffset": Object {
    "height": 2,
    "width": 0,
  },
  "shadowOpacity": 0.3,
  "shadowRadius": 1,
}
`;

exports[`iOS elevation(2) matches snapshot 1`] = `
Object {
  "shadowColor": "#000",
  "shadowOffset": Object {
    "height": 2,
    "width": 0,
  },
  "shadowOpacity": 0.3,
  "shadowRadius": 2,
}
`;

exports[`iOS elevation(3) matches snapshot 1`] = `
Object {
  "shadowColor": "#000",
  "shadowOffset": Object {
    "height": 2,
    "width": 0,
  },
  "shadowOpacity": 0.3,
  "shadowRadius": 3,
}
`;

exports[`iOS elevation(4) matches snapshot 1`] = `
Object {
  "shadowColor": "#000",
  "shadowOffset": Object {
    "height": 2,
    "width": 0,
  },
  "shadowOpacity": 0.3,
  "shadowRadius": 4,
}
`;

exports[`iOS elevation(6) matches snapshot 1`] = `
Object {
  "shadowColor": "#000",
  "shadowOffset": Object {
    "height": 2,
    "width": 0,
  },
  "shadowOpacity": 0.3,
  "shadowRadius": 6,
}
`;

exports[`iOS elevation(8) matches snapshot 1`] = `
Object {
  "shadowColor": "#000",
  "shadowOffset": Object {
    "height": 2,
    "width": 0,
  },
  "shadowOpacity": 0.3,
  "shadowRadius": 8,
}
`;

exports[`iOS elevation(9) matches snapshot 1`] = `
Object {
  "shadowColor": "#000",
  "shadowOffset": Object {
    "height": 2,
    "width": 0,
  },
  "shadowOpacity": 0.3,
  "shadowRadius": 9,
}
`;

exports[`iOS elevation(12) matches snapshot 1`] = `
Object {
  "shadowColor": "#000",
  "shadowOffset": Object {
    "height": 2,
    "width": 0,
  },
  "shadowOpacity": 0.3,
  "shadowRadius": 12,
}
`;

exports[`iOS elevation(16) matches snapshot 1`] = `
Object {
  "shadowColor": "#000",
  "shadowOffset": Object {
    "height": 2,
    "width": 0,
  },
  "shadowOpacity": 0.3,
  "shadowRadius": 16,
}
`;

exports[`iOS elevation(24) matches snapshot 1`] = `
Object {
  "shadowColor": "#000",
  "shadowOffset": Object {
    "height": 2,
    "width": 0,
  },
  "shadowOpacity": 0.3,
  "shadowRadius": 24,
}
`;
